--- a/matching-game-frontend/index.html
+++ b/matching-game-frontend/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
-
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    test text
+    <header>
+    <h1> Test your memory! </h1>
+    </header>
+
+    <main>
+    </main>
+    
+    <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
   </body>
 </html>
