login page has css

--- a/matching-game-frontend/index.html
+++ b/matching-game-frontend/index.html
@@ -2,16 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Matching Game</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=anaglyph">
+    
   </head>
   <body>
     <header>
-    <h1> Test your memory! </h1>
+    <h1 class='font-effect-anaglyph'> Test your memory! </h1>
     </header>
 
     <main>
     </main>
-    
+
     <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
   </body>
 </html>
