--- a/matching-game-frontend/index.html
+++ b/matching-game-frontend/index.html
@@ -15,6 +15,8 @@
     <main>
     </main>
 
+    <script type="application/javascript" src="src/timer.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
+
   </body>
 </html>
