--- a/matching-game-frontend/index.html
+++ b/matching-game-frontend/index.html
@@ -15,6 +15,7 @@
     <main>
     </main>
 
+    <script type="application/javascript" src="src/game.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/card.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/signin.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/timer.js" charset="UTF-8"></script>
