--- a/matching-game-frontend/index.html
+++ b/matching-game-frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=anaglyph">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -22,5 +23,6 @@
     <script type="application/javascript" src="src/timer.js" charset="UTF-8"></script>
     <script type="application/javascript" src="src/index.js" charset="UTF-8"></script>
 
+    <footer> Icons from <a href="https://icons8.com/">Icons8</a></footer>
   </body>
 </html>
